Create Login and Register Screen

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,28 +7,17 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Zarqa"
-        android:textColor="@color/white"
-        android:fontFamily="@font/gilroy_bold"
-        android:textSize="52sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/login_shape"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/register_shape"
         android:orientation="vertical"
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,7 +25,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/gilroy_semibold"
-            android:text="@string/login_title"
+            android:text="@string/register_title"
             android:textSize="22sp" />
 
         <TextView
@@ -44,15 +33,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
-            android:textColor="@color/grey"
             android:layout_marginBottom="40dp"
             android:fontFamily="@font/gilroy_medium"
-            android:text="@string/login_content"
+            android:text="@string/register_content"
             android:textAlignment="center"
+            android:textColor="@color/grey"
             android:textSize="14sp" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/edt_role"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
@@ -62,17 +52,29 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textSize="14sp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             tools:ignore="TextFields">
 
             <AutoCompleteTextView
                 android:id="@+id/edt_role_item"
-                android:maxLines="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="none"/>
+                android:inputType="none"
+                android:maxLines="1" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <EditText
+            android:id="@+id/edt_fullname"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:hint="@string/fullname"
+            android:inputType="text"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textSize="15sp"
+            tools:ignore="TextFields" />
 
         <EditText
             android:id="@+id/edt_email"
@@ -100,23 +102,36 @@
             android:textSize="15sp"
             tools:ignore="TextFields" />
 
+        <EditText
+            android:id="@+id/edt_phone"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:hint="@string/phone"
+            android:inputType="number"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textSize="15sp"
+            tools:ignore="TextFields" />
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="62dp"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="40dp"
             android:backgroundTint="@color/black"
-            android:text="@string/login"
+            android:text="@string/register"
             app:cornerRadius="16dp" />
 
 
         <LinearLayout
-            android:id="@+id/btn_create_new_account"
-            android:layout_marginBottom="10dp"
+            android:id="@+id/btn_already_have_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <TextView
@@ -126,7 +141,7 @@
                 android:layout_margin="4dp"
                 android:fontFamily="@font/gilroy_mediumitalic"
                 android:maxLines="1"
-                android:text="@string/create_new_account"
+                android:text="@string/already_have_account"
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
@@ -137,7 +152,7 @@
                 android:layout_margin="4dp"
                 android:fontFamily="@font/gilroy_bold"
                 android:maxLines="1"
-                android:text="@string/register"
+                android:text="@string/login"
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
