--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,11 +22,14 @@
         <item name="colorOnSurface">@color/black</item>
 
         <!-- Error color -->
-        <item name="colorError">@color/black</item>
+        <item name="colorError">#F44336</item>
         <item name="colorOnError">@color/white</item>
 
         <!-- Text color -->
         <item name="android:textColor">@color/black</item>
+
+        <!-- menghidupkan window content transitions -->
+        <item name="android:windowActivityTransitions">true</item>
     </style>
 
     <style name="Theme.Zarqa" parent="Base.Theme.Zarqa" />
