--- a/app/src/main/res/layout/activity_dropshipper.xml
+++ b/app/src/main/res/layout/activity_dropshipper.xml
@@ -5,16 +5,12 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.splash.SplashActivity">
+    tools:context=".views.dropshipper.DropshipperActivity">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lotti_loading"
+    <TextView
         android:layout_width="wrap_content"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_asyncUpdates="automatic"
         android:layout_height="wrap_content"
-        app:lottie_rawRes="@raw/loading"
+        android:text="Dropshipper Activity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
