--- a/app/src/main/res/layout/fragment_worker_home.xml
+++ b/app/src/main/res/layout/fragment_worker_home.xml
@@ -34,32 +34,59 @@
             android:src="@drawable/ic_bell" />
     </LinearLayout>
 
+    <!-- Vertikal Dashboard -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title">
 
-        <!-- Column -->
+        <!-- Horizontal Dashboard -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:backgroundTint="@color/purple_dashboard">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp">
+
+                    </ImageView>
 
                     <TextView
+                        android:textColor="@color/white"
+                        android:id="@+id/tv_total_stock_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
-                        tools:text="12000"
-                        android:textSize="20sp"
                         android:ellipsize="end"
-                        />
+                        android:maxLines="1"
+                        android:fontFamily="@font/sfpro_medium"
+                        android:textSize="20sp"
+                        tools:text="12000" />
+
+                    <TextView
+                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/sfpro_regular"
+                        android:maxLines="1"
+                        android:textSize="20sp"
+                        tools:text="Jumlah Barang" />
 
 
                 </LinearLayout>
