Berhasil menambahkan Item Product ke Database Room

--- a/app/src/main/res/layout/fragment_delete_product.xml
+++ b/app/src/main/res/layout/fragment_delete_product.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/soft_red"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.worker.warehouse.tab.deleteproduct.DeleteProductFragment">
 
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="Delete Product"
             android:textSize="30sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:gravity="center"
             android:fontFamily="@font/sfpro_bold"
             app:layout_constraintBottom_toBottomOf="parent"
