--- a/app/src/main/res/layout/fragment_all_product.xml
+++ b/app/src/main/res/layout/fragment_all_product.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/tosca"
     tools:context=".views.worker.warehouse.tab.allproduct.AllProductFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="All Product"
             android:textSize="30sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:gravity="center"
             android:fontFamily="@font/sfpro_bold"
             app:layout_constraintBottom_toBottomOf="parent"
