--- a/app/src/main/res/layout/fragment_low_stock_product.xml
+++ b/app/src/main/res/layout/fragment_low_stock_product.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/dark_green"
     tools:context=".views.worker.warehouse.tab.lowstockproduct.LowStockProductFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="Low Stock Product"
             android:textSize="30sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:gravity="center"
             android:fontFamily="@font/sfpro_bold"
             app:layout_constraintBottom_toBottomOf="parent"
